# LAPD_DAQ

./: .gitignore  Acquire_Scope_Data_2D.py  Data_Run.py  Data_Run_2D_raw.py  Data_Run_45deg.py  Data_Run_MultiScope_Camera.py  Data_Run_bmotion.py  LeCroy_Scope.py  Offload_Run.py  README.md  example_description.txt  example_experiment_config.ini  example_experiment_config.txt  offload_engine.py  offload_runner.py  pyproject.toml  requirements.txt  step-by-step-guide.docx  update_description.py
McPherson/: McPherson_Scope_data_handling.py  spectrometer_controller.py
acquisition/: __init__.py  bmotion.py  bmotion_config.py  config.py  config_errors.py  grid_spool_adapter.py  hdf5_writer.py  logging_utils.py  motor_recovery.py  run_paths.py  run_resume.py  scope_modes.py  scope_runner.py  spool_adapter.py
docs/: scope_io_channel_shots_refactor.md  tests.md
drivers/: __init__.py  phantom_recorder.py
lapd_daq/: __init__.py  cli.py  config.py  engine.py  models.py
lapd_daq/devices/: __init__.py  bmotion.py  direct.py  epics.py  fake.py  fakes.py  interfaces.py  lab_scopes.py  legacy_motion.py  phantom.py  pi_gpio.py
lapd_daq/storage/: __init__.py  hdf5.py
legacy/: Acquire_Scope_Data_2D.py  multi_scope_acquisition.py
motion/: Motor_Control.py  Motor_Control_1D.py  README.md  __init__.py  obstacle_avoidance.py  position_manager.py
notebooks/: scope_remote.ipynb
pi_gpio/: __init__.py  pi_client.py  pi_server.py
read_and_analyze/: Ey_May2026.py  PP_Rainbow_LCD.py  __init__.py  analysis_config.py  analysis_fluctuation.py  auto_plot.py  filter_data.py  fix_channel_descriptions.py  fluctuation_analysis.py  plot_x_line.py  plot_xy_map.py  read_bmotion_data.py  smart_trigger_analysis.py  smart_trigger_config.py
read_and_analyze/doc/: README.md
scope_io/: __init__.py  hdf5.py  wavedesc.py
scripts/: hardware_daq_check.py
spooling/: __init__.py  spool_format.py
tests/: __init__.py  _bmotion_stubs.py  _hardware_check_base.py  _hardware_check_helpers.py  _hdf5_assertions.py  _lapd_daq_fixtures.py  run_encoder_check.ps1  test_bmotion_config.py  test_bmotion_e2e_hardware.py  test_bmotion_e2e_hw.py  test_bmotion_hardware.py  test_bmotion_loops.py  test_bmotion_recovery_hardware.py  test_bmotion_recovery_hw.py  test_bmotion_toml_errors.py  test_camera_hw.py  test_config_errors.py  test_daq_check_helpers.py  test_daq_core.py  test_daq_framework_combined.py  test_daq_parallel.py  test_daq_spool.py  test_fix_channel_descriptions.py  test_hardware_camera.py  test_hardware_daq_check.py  test_hardware_instruments.py  test_hardware_motion.py  test_hardware_scope.py  test_lapd_daq_compat.py  test_lapd_daq_config.py  test_lapd_daq_core.py  test_lapd_daq_engine.py  test_lapd_daq_framework.py  test_motion_hw.py  test_motor_recovery.py  test_parallel_scope_read.py  test_read_analyze_doc_sync.py  test_scope_hw.py  test_scope_io.py  test_scope_modes.py  (+1 more)
