[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lapd-daq"
version = "0.1.0"
description = "LAPD experiment acquisition runner with an EPICS-ready device boundary."
requires-python = ">=3.10"
dependencies = [
    "h5py",
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
scope = [
    # lab_scopes is fetched from GitHub so `pip install ".[scope]"` works on any
    # machine (test PCs, fresh checkouts) with no extra steps.
    #
    # Dev override: to co-develop against a local checkout instead, run
    #     pip install -e ../lab_scopes
    # AFTER installing this extra. That converts lab_scopes to an editable
    # install pointing at your local source. Note that re-running
    # `pip install ".[scope]"` will re-fetch from git and replace the editable
    # copy, so re-apply the editable install when needed.
    "lab_scopes @ git+https://github.com/hjia94/lab_scopes.git",
    "pyvisa",
]
bmotion = [
    "bapsf-motion",
    "xarray",
]
camera = []

[project.scripts]
lapd-daq = "lapd_daq.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "acquisition*",
    "drivers*",
    "lapd_daq*",
    "motion*",
    "pi_gpio*",
]
