[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lapd-daq"
version = "0.1.0"
description = "LAPD experiment acquisition runner with an EPICS-ready device boundary."
requires-python = ">=3.10"
dependencies = [
    "h5py",
    "numpy",
    "tqdm",
    "scipy",       # motion.Motor_Control (scipy.optimize) is imported on the core path
    "matplotlib",  # plotting in motion/obstacle_avoidance and notebooks
]

[project.optional-dependencies]
scope = [
    # lab_scopes is fetched from GitHub so `pip install ".[scope]"` works on any
    # machine (test PCs, fresh checkouts) with no extra steps.
    #
    # Dev override: to co-develop against a local checkout instead, run
    #     pip install -e ../lab_scopes
    # AFTER installing this extra. That converts lab_scopes to an editable
    # install pointing at your local source. Note that re-running
    # `pip install ".[scope]"` will re-fetch from git and replace the editable
    # copy, so re-apply the editable install when needed.
    "lab_scopes @ git+https://github.com/hjia94/lab_scopes.git",
    "pyvisa",
    "pyvisa-py",   # pure-Python VISA backend for the legacy PyVISA path
]
bmotion = [
    # Pinned to the BaPSF `patch_position_regex` branch (commit b151f0d), which
    # fixes the encoder read for negative positions (the EP/SP/DI recv regexes)
    # and adds the native encoder API (Motor/Axis/Drive/MotionGroup.encoder,
    # Motor.counts_per_rev) that acquisition/motor_recovery.py now prefers. The
    # released PyPI `bapsf-motion` still has the negative-EP bug, so we pin the
    # exact commit until this work is merged upstream and released.
    #
    # When upstream releases a version with these fixes, replace this with the
    # version spec (e.g. "bapsf-motion>=<ver>"). LAPD_DAQ keeps a manual fallback
    # (raw EP read) so it still runs against an unpatched library, just without
    # the immediate-IE benefits.
    #
    # Dev override: to co-develop against a local checkout, run
    #     pip install -e ../../Bapsf/bapsf_motion
    # AFTER installing this extra (re-running the extra re-fetches from git).
    "bapsf-motion @ git+https://github.com/BaPSF/bapsf_motion.git@b151f0d7e20d239d3c4c7c2c86a4ccee10eba03e",
    "xarray",
]
camera = []
dev = [
    "jupyter",     # running the notebooks/ examples
]

[project.scripts]
lapd-daq = "lapd_daq.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "acquisition*",
    "drivers*",
    "lapd_daq*",
    "motion*",
    "pi_gpio*",
]
