[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lapd-daq"
version = "0.1.0"
description = "LAPD experiment acquisition runner with an EPICS-ready device boundary."
requires-python = ">=3.10"
dependencies = [
    "h5py",
    "numpy",
    "tqdm",
    "scipy",       # motion.Motor_Control (scipy.optimize) is imported on the core path
    "matplotlib",  # plotting in motion/obstacle_avoidance and notebooks
]

[project.optional-dependencies]
scope = [
    # lab_scopes is fetched from GitHub so `pip install ".[scope]"` works on any
    # machine (test PCs, fresh checkouts) with no extra steps.
    #
    # Pinned to v0.3.2 — the first release that fixes BOTH silent channel
    # data-loss bugs in the LeCroy driver:
    #   - v0.3.1 fixed C1 data-loss on 4-channel scopes (stale latched CMR
    #     dropped C1 during trace discovery).
    #   - v0.3.2 fixed the mirror-image C5-C8 data-loss on 8-channel scopes by
    #     reading channel count from VBS app.Acquisition.Channels instead of the
    #     unreliable IDN/CMR probe.
    # Earlier releases silently acquired no data on the affected channels, so do
    # NOT loosen this pin below v0.3.2.
    #
    # Dev override: to co-develop against a local checkout instead, run
    #     pip install -e ../lab_scopes
    # AFTER installing this extra. That converts lab_scopes to an editable
    # install pointing at your local source. Note that re-running
    # `pip install ".[scope]"` will re-fetch from git and replace the editable
    # copy, so re-apply the editable install when needed.
    "lab_scopes @ git+https://github.com/hjia94/lab_scopes.git@v0.3.2",
    "pyvisa",
    "pyvisa-py",   # pure-Python VISA backend for the legacy PyVISA path
]
bmotion = [
    # Requires bapsf-motion >= 2026.6.0b1, the first release that fixes the
    # encoder read for negative positions (the EP/SP/DI recv regexes) and adds
    # the native encoder API (Motor/Axis/Drive/MotionGroup.encoder,
    # Motor.counts_per_rev) that acquisition/motor_recovery.py now prefers.
    #
    # 2026.6.0b1 is a PRE-RELEASE (beta). pip will NOT install it unless
    # pre-releases are allowed, so install this extra with --pre:
    #     pip install --pre ".[bmotion]"
    # The latest STABLE release (2026.5.0 — what the test PC currently runs)
    # still has the negative-EP bug and must be upgraded:
    #     pip install --pre "bapsf-motion>=2026.6.0b1"
    # Once 2026.6.0 ships as a stable release, --pre is no longer needed.
    #
    # LAPD_DAQ keeps a manual fallback (raw EP read) so it still runs against an
    # unpatched/older library, just without the native immediate-IE encoder API.
    #
    # Dev override: to co-develop against a local checkout, run
    #     pip install -e ../../Bapsf/bapsf_motion
    # AFTER installing this extra.
    "bapsf-motion>=2026.6.0b1",
    "xarray",
]
camera = []
dev = [
    "jupyter",     # running the notebooks/ examples
]

[project.scripts]
lapd-daq = "lapd_daq.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "acquisition*",
    "drivers*",
    "lapd_daq*",
    "motion*",
    "pi_gpio*",
    "scope_io*",
]
